--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <div class="u-container-layout u-container-layout-5">
                       <div class="u-expanded u-grey-light-2 u-map">
                         <div class="embed-responsive">
-                          <iframe class="embed-responsive-item" src="https://maps.google.com/maps?output=embed&amp;q=azatlyk%2C%20mary%2C%20Turkmenistan&amp;z=16&amp;t=k" data-map="JTdCJTIycG9zaXRpb25UeXBlJTIyJTNBJTIybWFwLWFkZHJlc3MlMjIlMkMlMjJhZGRyZXNzJTIyJTNBJTIybWFyeSUyQyUyMFR1cmttZW5pc3RhbiUyMiUyQyUyMnpvb20lMjIlM0ExNiUyQyUyMnR5cGVJZCUyMiUzQSUyMnNhdGVsbGl0ZSUyMiUyQyUyMmxhbmclMjIlM0ElMjIlMjIlMkMlMjJhcGlLZXklMjIlM0ElMjIlMjIlN0Q="></iframe>
+                          <iframe class="embed-responsive-item" src="http://maps.google.com/maps?output=embed&amp;q=azatlyk%2C%20mary%2C%20Turkmenistan&amp;z=16&amp;t=k" data-map="JTdCJTIycG9zaXRpb25UeXBlJTIyJTNBJTIybWFwLWFkZHJlc3MlMjIlMkMlMjJhZGRyZXNzJTIyJTNBJTIybWFyeSUyQyUyMFR1cmttZW5pc3RhbiUyMiUyQyUyMnpvb20lMjIlM0ExNiUyQyUyMnR5cGVJZCUyMiUzQSUyMnNhdGVsbGl0ZSUyMiUyQyUyMmxhbmclMjIlM0ElMjIlMjIlMkMlMjJhcGlLZXklMjIlM0ElMjIlMjIlN0Q="></iframe>
                         </div>
                       </div>
                     </div>
